# django_shop

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
commands/: clean-all-data.sh  run-test.sh  seed-all-data.sh
src/: pytest.ini
src/apps/: context_processors.py
src/apps/accounts/: adapters.py  admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py  0002_alter_shippingaddress_user.py  (+1 more)
src/apps/catalog/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
src/apps/order/: admin.py  choices.py  cookies.py  loader.py  middleware.py  models.py  resolver.py  stripe_service.py  urls.py  utils.py  views.py
src/apps/review/: admin.py  api_views.py  forms.py  mixins.py  models.py  serializers.py  urls.py  views.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/core/settings/: settings.py  test_settings.py
src/seed_data/: catalog.py  mixins.py  users.py
src/seed_data/address/: address.py
src/seed_data/catalog/: catalog.py  description.py  dto.py
src/seed_data/order/: inventory.py  orders.py
src/seed_data/review/: random_replies.py  random_review_rating.py  review_rating_reply.py
src/seed_data/users/: users.py  utils.py
src/static/css/: main.css
src/static/js/: main.js  utils.js
src/templates/components/: active_filters.html  breadcrumb.html  filter_sidebar.html  footer.html  header.html  pagination.html  per_page_select.html  sort_select.html
src/templates/layout/: base.html
src/templates/pages/: home.html
(+77 files in other folders)
